--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <nav class="menu">
     <div class="menu__container">
       <div class="menu__logo">
-        <img src="./assets/img/logo_inverse.svg" alt="">
+        <p>Restaurant</p>
       </div>
 
       <div class="menu__options">
@@ -47,8 +47,7 @@
 
   <header class="header">
     <div class="header__container" id="home">
-      <img src="./assets/img/Vector-Smart-Object.png" alt="">
-      <h1>Börups Shalé Restaurant</h1>
+      <h1>Restaurant</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed iure repellendus molestiae quasi ab natus autem, veritatis quisquam error facilis quibusdam.</p>
       <a href="#">Show menu</a>
       <i class="las la-angle-double-down"></i>
@@ -58,7 +57,7 @@
 
   <section class="about" id="about">
     <div class="about__container">
-      <img src="./assets/img/dm22__image_02-min.jpg" alt="">
+      <img src="./assets/img/about.jpg" alt="">
       <div class="about__title">
         <span>Ching are good enough</span>
         <h2>Shankle sausage burgdoggen, meatloaf drumstick beef chuck</h2>
@@ -78,7 +77,7 @@
     <div class="posts__body">
       <div class="posts__item">
         <div class="posts__img">
-          <img src="./assets/img/dm22__image_04-min.jpg" alt="">
+          <img src="./assets/img/post-1.jpg" alt="">
           <div>
             <span>Traditionally Prepared Boiled Bacon</span>
             <p>Here goes a subheading</p>
@@ -90,7 +89,7 @@
 
       <div class="posts__item">
         <div class="posts__img">
-          <img src="./assets/img/dm22__image_05-min.jpg" alt="">
+          <img src="./assets/img/post-2.jpg" alt="">
           <div>
             <span>Traditionally Prepared Boiled Bacon</span>
             <p>Here goes a subheading</p>
@@ -102,7 +101,7 @@
 
       <div class="posts__item">
         <div class="posts__img">
-          <img src="./assets/img/dm22__image_06-min.jpg" alt="">
+          <img src="./assets/img/post-3.jpg" alt="">
           <div>
             <span>Traditionally Prepared Boiled Bacon</span>
             <p>Here goes a subheading</p>
@@ -141,12 +140,108 @@
           </div>
           <div class="cardapio__content">
             <div>
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-41.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-42.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-43.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
             </div>
   
             <div>
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-42.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-48.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-46.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
             </div>
   
             <div>
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-41.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-47.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/Layer-44.png" alt="">
+                <div>
+                  <div>
+                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>£23</span>
+                  </div>
+                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                </div>
+              </div>
             </div>
 
           </div>
@@ -177,19 +272,19 @@
       </div>
       <div class="testimonials__content">
         <div>
-          <img src="./assets/img/nor__avatar__02__min.jpg" alt="">
+          <div><img src="./assets/img/testemonials-1.jpg" alt=""></div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aliquam delectus distinctio unde quis minima quis minima doloremque doloremque blanditiis eos dolor.</p>
           <span><strong>Marco Guerra</strong></span>
           <span>Web developer</span>
         </div>
         <div>
-          <img src="./assets/img/nor__avatar__03__min.jpg" alt="">
+          <div><img src="./assets/img/testemonials-2.jpg" alt=""></div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aliquam delectus distinctio unde quis minima quis minima doloremque doloremque blanditiis eos dolor.</p>
           <span><strong>Andrew McGregor</strong></span>
           <span>Ui/Ux Designer</span>
         </div>
         <div>
-          <img src="./assets/img/dm16__image_10-min.png" alt="">
+          <div><img src="./assets/img/testemonials-3.jpg" alt=""></div>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aliquam delectus distinctio unde quis minima quis minima doloremque doloremque blanditiis eos dolor.</p>
           <span><strong>Stacey Pickering</strong></span>
           <span>Product manager</span>
@@ -199,22 +294,47 @@
     
   </section>
 
+  <section class="form">
+    <div class="form__title">
+      <span>Get in touch with restaurant</span>
+      <h2>Make a Reservation</h2>
+    </div>
+    <div class="form__content">
+      <form action="">
+        <div>
+          <input type="text" placeholder="First name">
+          <input type="text" placeholder="Last name">
+        </div>
+        <div>
+          <input type="text" placeholder="Email">
+          <input type="text" placeholder="Phone">
+        </div>
+        <div>
+          <input type="text" placeholder="Date">
+          <input type="text" placeholder="Hour">
+          <input type="text" placeholder="1 Person">
+        </div>
+        <button>Book a table</button>
+      </form>
+    </div>
+  </section>
+
   <footer class="footer" id="contact">
     <div class="footer__container">
 
       <div class="footer__about">
-        <img src="./assets/img/logo_inverse.svg" alt="">
+        <h3>Restaurant</h3>
         <p>Be the first to find out exclusive deals, the latest Lookbooks.</p>
-        <input type="text" placeholder="Enter yout email">
+        <input type="text" placeholder="Enter your email">
         <button>Subscribe</button>
       </div>
 
       <div class="footer__contact">
         <h3>Contact</h3>
         <ul>
-          <li><span>Phone: +1 601 722 8001</span></li>
-          <li><span>Email: norebrotheme@colabr.io</span></li>
-          <li><span>Address: Fensmark 23, København</span></li>
+          <li><span>Phone: +55 11 9999 9999</span></li>
+          <li><span>Email: contact@restaurant.com</span></li>
+          <li><span>Address: Paulist Avunie 9999</span></li>
         </ul>
         <div>
           <div><i class="lab la-facebook-f"></i></div>
@@ -227,11 +347,11 @@
         <h3>Recent comments</h3>
         <ul>
           <li>
-            <span>Sofia Helin</span>
-            <a href="">Norebro is a creative WordPress Theme</a>
+            <span>Sofia Pickering</span>
+            <a href="">Restaurant is a creative website design</a>
           </li>
           <li>
-            <span>Sofia Helin</span>
+            <span>Marco Guerra</span>
             <a href="">Misses about Bette Davis, Joan Crawford</a>
           </li>
         </ul>
@@ -242,19 +362,19 @@
         <ul>
           <li>
             <a href="">Misses about Bette Davis, Joan Crawford</a>
-            <span>September 27, 2017</span>
+            <span>September 04, 2020</span>
             <span>Business</span>
           </li>
           <li>
-            <a href="">New art venue opens in Downtown CF</a>
-            <span>September 27, 2017</span>
+            <a href="">New art venue opens in Downtown</a>
+            <span>September 04, 2020</span>
             <span>Business</span>
           </li>
         </ul>
       </div>
 
       <div class="footer__copy">
-        <p>© 2020, Norebro theme by <a href="#">Colabrio</a> | <a href="#">Privacy policy</a> | <a href="#">Sitemap</a></p>
+        <p>© 2020, Restaurant theme | <a href="#">Privacy policy</a> | <a href="#">Sitemap</a></p>
         <p>All rights reserved.</p>
       </div>
 
