--- a/public/index.html
+++ b/public/index.html
@@ -334,7 +334,7 @@
         <ul>
           <li><span>Phone: +55 11 9999 9999</span></li>
           <li><span>Email: contact@restaurant.com</span></li>
-          <li><span>Address: Paulist Avunie 9999</span></li>
+          <li><span>Address: Paulist Avenue 9999</span></li>
         </ul>
         <div>
           <div><i class="lab la-facebook-f"></i></div>
