--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Clone: Food</title>
   <link href="./assets/vendor/line-awesome/css/line-awesome.min.css" rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -141,33 +142,68 @@
           <div class="cardapio__content">
             <div>
               <div class="cardapio__item">
-                <img src="./assets/img/Layer-41.png" alt="">
+                <img src="./assets/img/break-1.png" alt="">
                 <div>
                   <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
+                    <span>Thin rings of calamari, appr. 30 min</span>
+                    <span>£14</span>
                   </div>
                   <p>With goats cheese, black pepper, served with beef ragout</p>
                 </div>
               </div>
 
               <div class="cardapio__item">
-                <img src="./assets/img/Layer-42.png" alt="">
+                <img src="./assets/img/break-2.png" alt="">
                 <div>
                   <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
+                    <span>Crispy red prawns, appr. 30 min</span>
+                    <span>£13</span>
                   </div>
-                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                  <p>With sardine sauce, dry marinated tomato, capers and escarole</p>
                 </div>
               </div>
 
               <div class="cardapio__item">
-                <img src="./assets/img/Layer-43.png" alt="">
+                <img src="./assets/img/break-3.png" alt="">
+                <div>
+                  <div>
+                    <span>Egg plant parmigiana, appr. 30 min</span>
+                    <span>£12</span>
+                  </div>
+                  <p>With lemon cream sauce, red prawns, lumpfish on creamed spinach</p>
+                </div>
+              </div>
+            </div>
+  
+            <div>
+              <div class="cardapio__item">
+                <img src="./assets/img/main-1.png" alt="">
+                <div>
+                  <div>
+                    <span>Local fish, appr. 30 min</span>
+                    <span>£23</span>
+                  </div>
+                  <p>With porchetta, rucola, pear in red wine, provolone cheese</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/main-2.png" alt="">
+                <div>
+                  <div>
+                    <span>Tagliolini antica trattoria, appr. 30 min</span>
+                    <span>£24</span>
+                  </div>
+                  <p>With potatoes cream flavored with black truffles, mushrooms</p>
+                </div>
+              </div>
+
+              <div class="cardapio__item">
+                <img src="./assets/img/main-3.png" alt="">
                 <div>
                   <div>
                     <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
+                    <span>£25</span>
                   </div>
                   <p>With goats cheese, black pepper, served with beef ragout</p>
                 </div>
@@ -176,70 +212,35 @@
   
             <div>
               <div class="cardapio__item">
-                <img src="./assets/img/Layer-42.png" alt="">
+                <img src="./assets/img/dessert-1.png" alt="">
                 <div>
                   <div>
                     <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
+                    <span>£10</span>
                   </div>
                   <p>With goats cheese, black pepper, served with beef ragout</p>
                 </div>
               </div>
 
               <div class="cardapio__item">
-                <img src="./assets/img/Layer-48.png" alt="">
+                <img src="./assets/img/dessert-2.png" alt="">
                 <div>
                   <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
+                    <span>Thin rings of calamari, appr. 30 min</span>
+                    <span>£11</span>
                   </div>
-                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                  <p>With potatoes cream flavored with black truffles, mushrooms</p>
                 </div>
               </div>
 
               <div class="cardapio__item">
-                <img src="./assets/img/Layer-46.png" alt="">
+                <img src="./assets/img/dessert-3.png" alt="">
                 <div>
                   <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
+                    <span>Egg plant parmigiana, appr. 30 min</span>
+                    <span>£12</span>
                   </div>
-                  <p>With goats cheese, black pepper, served with beef ragout</p>
-                </div>
-              </div>
-            </div>
-  
-            <div>
-              <div class="cardapio__item">
-                <img src="./assets/img/Layer-41.png" alt="">
-                <div>
-                  <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
-                  </div>
-                  <p>With goats cheese, black pepper, served with beef ragout</p>
-                </div>
-              </div>
-
-              <div class="cardapio__item">
-                <img src="./assets/img/Layer-47.png" alt="">
-                <div>
-                  <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
-                  </div>
-                  <p>With goats cheese, black pepper, served with beef ragout</p>
-                </div>
-              </div>
-
-              <div class="cardapio__item">
-                <img src="./assets/img/Layer-44.png" alt="">
-                <div>
-                  <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
-                    <span>£23</span>
-                  </div>
-                  <p>With goats cheese, black pepper, served with beef ragout</p>
+                  <p>With lemon cream sauce, red prawns, lumpfish on creamed spinach</p>
                 </div>
               </div>
             </div>
