--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
               <li><a href="#contact">Contact</a></li>
               
             </ul>
-            <p>© 2020, Norebro theme by <a href="#">Colabrio</a> | <a href="#">Privacy policy</a> | <a href="#">Sitemap</a></p>
+            <p>© 2020, Restaurant theme | <a href="#">Privacy policy</a> | <a href="#">Sitemap</a></p>
             <p>All rights reserved.</p>
             <div>
               <div><i class="lab la-facebook-f"></i></div>
@@ -145,7 +145,7 @@
                 <img src="./assets/img/break-1.png" alt="">
                 <div>
                   <div>
-                    <span>Thin rings of calamari, appr. 30 min</span>
+                    <span>Cheese sandwich</span>
                     <span>£14</span>
                   </div>
                   <p>With goats cheese, black pepper, served with beef ragout</p>
@@ -156,7 +156,7 @@
                 <img src="./assets/img/break-2.png" alt="">
                 <div>
                   <div>
-                    <span>Crispy red prawns, appr. 30 min</span>
+                    <span>Salad sandwich</span>
                     <span>£13</span>
                   </div>
                   <p>With sardine sauce, dry marinated tomato, capers and escarole</p>
@@ -167,7 +167,7 @@
                 <img src="./assets/img/break-3.png" alt="">
                 <div>
                   <div>
-                    <span>Egg plant parmigiana, appr. 30 min</span>
+                    <span>Eggs</span>
                     <span>£12</span>
                   </div>
                   <p>With lemon cream sauce, red prawns, lumpfish on creamed spinach</p>
@@ -180,7 +180,7 @@
                 <img src="./assets/img/main-1.png" alt="">
                 <div>
                   <div>
-                    <span>Local fish, appr. 30 min</span>
+                    <span>Fish</span>
                     <span>£23</span>
                   </div>
                   <p>With porchetta, rucola, pear in red wine, provolone cheese</p>
@@ -191,7 +191,7 @@
                 <img src="./assets/img/main-2.png" alt="">
                 <div>
                   <div>
-                    <span>Tagliolini antica trattoria, appr. 30 min</span>
+                    <span>Salad</span>
                     <span>£24</span>
                   </div>
                   <p>With potatoes cream flavored with black truffles, mushrooms</p>
@@ -202,7 +202,7 @@
                 <img src="./assets/img/main-3.png" alt="">
                 <div>
                   <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>Ravioli</span>
                     <span>£25</span>
                   </div>
                   <p>With goats cheese, black pepper, served with beef ragout</p>
@@ -215,7 +215,7 @@
                 <img src="./assets/img/dessert-1.png" alt="">
                 <div>
                   <div>
-                    <span>Ravioli with cheeze, appr. 30 min </span>
+                    <span>Cake</span>
                     <span>£10</span>
                   </div>
                   <p>With goats cheese, black pepper, served with beef ragout</p>
@@ -226,7 +226,7 @@
                 <img src="./assets/img/dessert-2.png" alt="">
                 <div>
                   <div>
-                    <span>Thin rings of calamari, appr. 30 min</span>
+                    <span>Pineaple</span>
                     <span>£11</span>
                   </div>
                   <p>With potatoes cream flavored with black truffles, mushrooms</p>
@@ -237,7 +237,7 @@
                 <img src="./assets/img/dessert-3.png" alt="">
                 <div>
                   <div>
-                    <span>Egg plant parmigiana, appr. 30 min</span>
+                    <span>Brownie</span>
                     <span>£12</span>
                   </div>
                   <p>With lemon cream sauce, red prawns, lumpfish on creamed spinach</p>
